Changes:
* add descriptions for document-with-uuid and document-at-path
