# docs/swagger/dist/swagger.json
@@ -3,12 +3,12 @@
     "info": {
         "version": "1.0.0",
         "title": "hippo-backend-swagger",
-        "description": "Swagger definitions for hippo-backend",
+        "description": "<h1>XINmods: An Open Source Headless CMS Content as a Service Solution for Bloomreach XM</h1>\n<p>The <em>XIN mods</em> are a set of tools that turn a vanilla Blooomreach XM install into an easy-to-deploy <strong>Fully Headless Content as a Service</strong> instance that you can use to quickly model and query information in your repository with!</p>\n<p>It includes the following:</p>\n<ul>\n    <li>A more compact authoring experience.</li>\n    <li>More dynamic asset management with focus point selection.</li>\n    <li>Package management - move your content between servers.</li>\n    <li>Multi-tenanted Document REST API to query and retrieve the documents you need.</li>\n    <li>XIN Mods Collections that allows you to store and retrieve simple flat documents.</li>\n    <li>Admin panels and custom iframe panels for integrations with other systems you use.</li>\n    <li>Finally integrating the CMS events with your other microservices.</li>\n    <li>An easy to use NodeJS package to integrate your systems with Bloomreach XM easily.</li>\n    <li>All the great things you know from Bloomreach XM.</li>\n</ul>\n\n<p>\n    Find more information here:\n</p>\n<ul>\n    <li><a href=\"https://github.com/XIN-Solutions/hippo-xinmods\">Bloomreach with XIN mods Source</a></li>\n    <li><a href=\"https://xinsolutions.co.nz/bloomreach-headless-cms-caas\">Documentation</a></li>\n    <li><a href=\"https://marnixkok.nl/tutorials\">XIN Mods Video tutorials</a></li>\n</ul>\n",
         "common": [
             "Models.js"
         ]
     },
-    "host": "localhost:8090",
+    "host": "localhost:8080",
     "schemes": [
         "http",
         "https"
@@ -21,27 +21,6 @@
         "application/json"
     ],
     "paths": {
-        "/api/xin/facets/get": {
-            "get": {
-                "summary": "Get Facet at path",
-                "tags": [
-                    "Content"
-                ],
-                "id": "get_apixinfacetsget",
-                "description": "Get facet at path",
-                "operationId": "get_apixinfacetsget",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "The Facet information",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                },
-                "deprecated": false
-            }
-        },
         "/api/xin/content/document-with-uuid": {
             "get": {
                 "summary": "Get document with UUID",
@@ -51,12 +30,46 @@
                 "id": "get_apixincontentdocumentwithuuid",
                 "description": "Get document with UUID",
                 "operationId": "get_apixincontentdocumentwithuuid",
-                "parameters": [],
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": false,
+                        "description": "Basic authorization header for user in the `restapi` group or `admin` user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "uuid",
+                        "in": "query",
+                        "required": false,
+                        "description": "the unique identifier of the document you wish to retrieve.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "fetch",
+                        "in": "query",
+                        "required": false,
+                        "description": "partial paths to items in the payload that must be <a href=\"https://marnixkok.nl/news/bloomreach-xm-tutorials/prefetching-content-from-bloomreach-xm-using-xin-mods\" target=\"_blank\">prefetched</a>.",
+                        "schema": {
+                            "$ref": "#/definitions/[ 'Array' ].<string>"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "the document with a particular UUID",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/DocumentWithUuidResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Sent when the credentials are invalid.",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 },
@@ -65,19 +78,53 @@
         },
         "/api/xin/content/document-at-path": {
             "get": {
-                "summary": "Get document at Path",
+                "summary": "Get document at path",
                 "tags": [
                     "Content"
                 ],
                 "id": "get_apixincontentdocumentatpath",
                 "description": "Get document at path",
                 "operationId": "get_apixincontentdocumentatpath",
-                "parameters": [],
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": false,
+                        "description": "Basic authorization header for user in the `restapi` group or `admin` user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "path",
+                        "in": "query",
+                        "required": false,
+                        "description": "the path of the document you wish to retrieve.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "fetch",
+                        "in": "query",
+                        "required": false,
+                        "description": "partial paths to items in the payload that must be <a href=\"https://marnixkok.nl/news/bloomreach-xm-tutorials/prefetching-content-from-bloomreach-xm-using-xin-mods\" target=\"_blank\">prefetched</a>.",
+                        "schema": {
+                            "$ref": "#/definitions/[ 'Array' ].<string>"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "the document at that path",
+                        "description": "the document with a particular UUID",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/DocumentWithUuidResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Sent when the credentials are invalid.",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 },
@@ -168,11 +215,32 @@
                 "deprecated": false
             }
         },
+        "/api/xin/facets/get": {
+            "get": {
+                "summary": "Get Facet at path",
+                "tags": [
+                    "Complex Content"
+                ],
+                "id": "get_apixinfacetsget",
+                "description": "Get facet at path",
+                "operationId": "get_apixinfacetsget",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "The Facet information",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
         "/api/xin/query": {
             "get": {
                 "summary": "Execute a query that returns a set of documents.",
                 "tags": [
-                    "Content"
+                    "Complex Content"
                 ],
                 "id": "get_apixinquery",
                 "description": "<p>Execute a query that returns a set of documents.</p> <p>Can we do multiple lines?</p>",
@@ -291,5 +359,89 @@
             }
         }
     },
-    "definitions": {}
+    "definitions": {
+        "BloomreachDocument": {
+            "type": "object",
+            "title": "BloomreachDocument",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "description": "the UUID of the document"
+                },
+                "name": {
+                    "type": "string",
+                    "description": "the node name of the document"
+                },
+                "displayName": {
+                    "type": "string",
+                    "description": "the human-readable label of the document"
+                },
+                "path": {
+                    "type": "string",
+                    "description": "the resolved path at which the document lives in the JCR"
+                },
+                "type": {
+                    "type": "string",
+                    "description": "the CND type of the document that has been retrieved"
+                },
+                "locale": {
+                    "type": "string",
+                    "description": "the document locale"
+                },
+                "pubState": {
+                    "type": "string",
+                    "description": "'published' (unpublished documents are not exposed in the API)"
+                },
+                "pubwfCreationDate": {
+                    "type": "string",
+                    "description": "publication workflow creation ISO date string indicating when the document was created."
+                },
+                "pubwfLastModificationDate": {
+                    "type": "string",
+                    "description": "publication workflow modification date formatted as an ISO date string."
+                },
+                "pubwfPublicationDate": {
+                    "type": "string",
+                    "description": "publication workflow publication ISO date string indicating when the document was first published"
+                },
+                "items": {
+                    "type": "object",
+                    "description": "object describing the values stored in the document, this structure will be different for every document type."
+                }
+            },
+            "required": []
+        },
+        "ApiResponse": {
+            "type": "object",
+            "title": "ApiResponse",
+            "properties": {
+                "success": {
+                    "type": "boolean",
+                    "description": "`true` indicates the operation was successful."
+                },
+                "message": {
+                    "type": "string",
+                    "description": "the message describing the state of the response."
+                }
+            },
+            "required": []
+        },
+        "DocumentWithUuidResponse": {
+            "type": "object",
+            "title": "DocumentWithUuidResponse",
+            "properties": {
+                "document": {
+                    "$ref": "#/definitions/BloomreachDocument",
+                    "description": "the document that is present at the UUID"
+                }
+            },
+            "required": [],
+            "allOf": [
+                {
+                    "type": "ApiResponse",
+                    "$ref": "#/definitions/ApiResponse"
+                }
+            ]
+        }
+    }
 }
